--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,6 @@
   </head>
   <body>
     <h1 align="center">Welcome</h1>
-	<center>
 	<form method="post" action = "login.php" >
 		<table>
 			<tr>
@@ -27,7 +26,8 @@
 			</tr>
 		</table>
 	</form>
-	</center>
+	<HR style="FILTER: progid:DXImageTransform.Microsoft.Glow(color=#987cb9,strength=10)" width="80%" color=#987cb9 SIZE=1>
+	<footer align = "center"><small>湘ICP备17017352号</small></footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
