--- a/website/index.html
+++ b/website/index.html
@@ -14,8 +14,8 @@
 	<form method="post" action = "login.php" >
 		<table>
 			<tr>
-				<td><label width = "20px">用户名：</label></td>
-				<td><input type = "test" name = "userName" required/></td>
+				<td><label>用户名：</label></td>
+				<td><input type = "test" name = "userName"  required/></td>
 			</tr>
 			<tr>
 				<td><label>密码：</label></td>
